--- a/index.html
+++ b/index.html
@@ -926,7 +926,7 @@
               <div class="ud-contact-title">
                 <span>CONTACT US</span>
                 <h2>
-                  Let’s talk about <br />
+                  Let’s talk <br />
                   Love to hear from you!
                 </h2>
               </div>
